Bug 792809 Add a register foreground CSS class
With the current setup when a dark theme is used with existing register
colours the text is hard to read as the dark theme may of changed the
text colour to white so with these changes the text is always black
unless they choose not to use the built in colours.

--- a/gnucash/gnucash-310.css
+++ b/gnucash/gnucash-310.css
@@ -37,6 +37,11 @@
 @define-color register_secondary_bg_color #F6FFDA;
 @define-color register_split_bg_color #EDE7D3;
 @define-color register_cursor_bg_color #FFEF98;
+@define-color register_fg_color black;
+
+*.register-foreground {
+  color: @register_fg_color;
+}
 
 *.register-header {
   background-color: @register_header_bg_color;
@@ -72,6 +77,15 @@
 
 *.register-cursor:insensitive {
   background-color: mix (@register_cursor_bg_color, grey, 0.2);
+}
+
+/* Change font color by mixing with grey */
+.lighter-grey-mix {
+  color: mix (currentColor, grey, 0.8);
+}
+
+.darker-grey-mix {
+  color: mix (currentColor, grey, 0.2);
 }
 
 /* Some tweaks for the about dialog */
