--- a/gnucash/gnucash-320.css
+++ b/gnucash/gnucash-320.css
@@ -28,6 +28,11 @@ cursor button {
 @define-color register_secondary_bg_color #F6FFDA;
 @define-color register_split_bg_color #EDE7D3;
 @define-color register_cursor_bg_color #FFEF98;
+@define-color register_fg_color black;
+
+*.register-foreground {
+  color: @register_fg_color;
+}
 
 *.register-header {
   background-color: @register_header_bg_color;
@@ -63,6 +68,15 @@ cursor button {
 
 *.register-cursor:disabled {
   background-color: mix (@register_cursor_bg_color, grey, 0.2);
+}
+
+/* Change font color by mixing with grey */
+.lighter-grey-mix {
+  color: mix (currentColor, grey, 0.8);
+}
+
+.darker-grey-mix {
+  color: mix (currentColor, grey, 0.2);
 }
 
 /* Some tweaks for the about dialog */
